--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -38,7 +38,7 @@ services:
       restart_policy:
         condition: on-failure
   result:
-    image: dockersamples/examplevotingapp_result:after
+    image: dockersamples/examplevotingapp_result:before
     ports:
       - 5001:80
     networks:
